<resources>
    <string name="app_name">Your Meal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matb5k">Matbخk</string>
    <string name="next">Next</string>
    <string name="matbkhk">Matb5k</string>
    <string name="baked">Baked</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_an_account">Create An Account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="google">Google</string>
    <string name="phone">Phone</string>
    <string name="daily_inspiration">Daily Inspiration</string>
    <string name="recommended">Recommended</string>
    <string name="meal_of_the_day">Meal of The Day</string>
    <string name="meal_title">Meal Title</string>
    <string name="for_you">Special Meals For You</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="area">"Area: "</string>
    <string name="category">"Category: "</string>
    <string name="meal_details">Meal Details</string>
    <string name="meal_name">Meal Name</string>
    <string name="category_area">Category | Area</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="detailed_instructions_for_the_recipe">Detailed instructions for the recipe.</string>
    <string name="youtube">YouTube:</string>
    <string name="measure">Measure</string>
    <string name="ingredient">Ingredient</string>
    <string name="calender">Calender</string>
    <string name="favourite">Favourite</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="country">Country</string>
    <string name="google_sign_in">OR SignIn With</string>
    <string name="hello">Hello, My Chef</string>
    <string name="favorite_meals">Favorite Meals</string>
    <string name="planned_meals">Planned Meals</string>
    <string name="logout">Logout</string>
    <string name="continue_as_a_guest">Continue as a Guest</string>
    <string name="search_result">Search Result</string>
    <string name="income">Incoming Meal</string>
    <string name="welcome">Welcome Chef</string>
    <string name="week_plan">Your Week Plan:</string>
</resources>