<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home1"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_calender"
        android:icon="@drawable/calendar"
        android:title="@string/calender" />

    <item
        android:id="@+id/navigation_fav"
        android:icon="@drawable/fav"
        android:title="@string/favourite" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/search" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/profile" />




</menu>